Thu Oct 14 18:48:54 1999  Richard Henderson  <rth@cygnus.com>

	* recog.c (pmode_register_operand): New.
	* recog.h: Declare it.
	* genrecog.c (pred_codes): Likewise.
	(special_mode_pred_table): Likewise.
	(validate_pattern): Don't warn no mode for address_operand.

	* print-rtl.c (print_rtx) [LABEL_REF]: Only do full subexpression
	if the operand is not insn-like.

Thu Oct 14 19:38:42 1999  Jeffrey A Law  (law@cygnus.com)
			  Sylvian Pion <Sylvain.Pion@sophia.inria.fr>

	* fold-const.c (fold): Handle more simplifications allowed by IEEE.

Thu Oct 14 17:30:14 1999  Richard Henderson  <rth@cygnus.com>

	* sparc.md (*): Use {nonimmediate,register}_operand as appropriate
	instead of general_operand in a SET_DEST.  Use const_double_operand
	instead of an explicit test against CONST_DOUBLE.
	(movsf_const_lo): Add missing register mode.
	(goto_handler_and_restore): Add auxiliary test for Pmode.
	(flush): Adjust to use address_operand.
	(return_sf_no_fpu): Add missing output constraint.

Thu Oct 14 17:21:26 1999  Richard Henderson  <rth@cygnus.com>

	* rs6000.md (call_value_indirect_aix32): Use wildcard match_operand
	for call return value.
	(call_value_indirect_aix64, call_value_indirect_nt): Likewise.

Thu Oct 14 13:54:25 1999  Jason Merrill  <jason@yorick.cygnus.com>

	* toplev.c (main): Only warn about options for other languages.
	* collect2.c (main): Pass -w to sub-gcc.

Thu Oct 14 16:27:50 1999  Richard Henderson  <rth@cygnus.com>

	* flow.c (propagate_block): Add call-clobbered registers to
	significant too.

	* flow.c (propagate_block): Use free_EXPR_LIST_list instead of
	zapping mem_set_list.
	(invalidate_mems_from_autoinc): Use free_EXPR_LIST_node.
	(mark_set_1, mark_used_regs): Likewise.

Thu Oct 14 10:51:49 1999  Richard Henderson  <rth@cygnus.com>

	* m68k.md (zero_extendsidi2): Add missing output reload constraint.

Wed Oct 13 00:09:18 1999  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* invoke.texi: Label -Wbad-function-cast, -Wmissing-prototypes,